--- a/css/styles.css
+++ b/css/styles.css
@@ -15,10 +15,14 @@ font-family: "Roboto", "Helvetica", "Sans-serif";
 .masthead {
   height: 100vh;
   min-height: 500px;
-  background-image: url('https://source.unsplash.com/BtbjCFUvBXs/1920x1080');
+  background-image: url('../images/masthead.jpeg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+}
+
+.card-title{
+    color: #465881;
 }
 
 
