--- a/css/styles.css
+++ b/css/styles.css
@@ -12,14 +12,7 @@ font-family: "Roboto", "Helvetica", "Sans-serif";
 }
 
 
-.masthead {
-  height: 100vh;
-  min-height: 500px;
-  background-image: url('../images/masthead.jpeg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
+
 
 .card-title{
     color: #465881;
@@ -335,5 +328,29 @@ header .overlay {
   }
 }
 
+/* about */
 
-
+.how-section1{
+    margin-top:10px;
+    padding: 12%;
+}
+.how-section1 h4{
+    color: #6e6b64;
+    font-weight: bold;
+    font-size: 30px;
+}
+.how-section1 .subheading{
+    color: #121127;
+    font-size: 20px;
+}
+.how-section1 .row
+{
+    margin-top: 10%;
+}
+.how-img 
+{
+    text-align: center;
+}
+.how-img img{
+    width: 70%;
+}
