--- a/css/styles.css
+++ b/css/styles.css
@@ -141,7 +141,7 @@ background-color: #fff;
 
 .masthead h2 {
   max-width: 20rem;
-  font-size: 1rem;
+  font-size: 3rem!important;
 }
 
 @media (min-width: 768px) {
@@ -507,3 +507,7 @@ header .overlay {
 /*map*/
 
 div#map {min-height: 460px;}
+
+.light{
+    color: #fff!important;
+}
