colour change for menu-button when responive

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ background-color: #fff;
   font-size: 80%;
   padding: 0.75rem;
   color: #777;
-  border: 1px solid #64a19d;
+  border: 1px solid #dc3545;
 }
 
 #mainNav .navbar-toggler:focus {
