small margin change on contact page, change of headings

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,8 +52,9 @@ background-color: #fff;
   background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("../images/st.jpeg");
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: scroll;
+  background-attachment: fixed;
   background-size: cover;
+  
 }
 
 .masthead h1 {
