--- a/css/styles.css
+++ b/css/styles.css
@@ -55,13 +55,12 @@ background-color: #fff;
     bottom: 5%;
     left: 50%;
     transform: translate(-50%,-50%);
-    border: 2px solid #fff;
-    border-radius: 50%;
+    
     width: 80px;
     height:80px;
     text-align: center;
     line-height: 80px;
-    font-size: 50px;
+    font-size: 80px;
     overflow: hidden;
 }
 
@@ -594,14 +593,14 @@ div#map {min-height: 480px;}
     color: #fff!important;
 }
 
-/* best review on home page */
+/* reviews img on hover */
 
 .card-img-top:hover {
     
 transition: all 0.2s ease-out;
     box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
     top: -4px;
-    border: 1px solid #ff6363;
+    border: 3px solid #ff6363;
     background-color: white;
 }
 
@@ -617,8 +616,35 @@ transition: all 0.2s ease-out;
     border-radius: 32px;
     transform: scale(2);
     transform-origin: 50% 50%;
-    transition: transform 0.15s ease-out;
+    transition: transform 0.35s ease-out;
 }
 .card-img-top:hover:before {
+    transform: scale(2.15);
+  }
+
+  .img-fluid:hover {
+    
+transition: all 0.2s ease-out;
+    box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
+    top: -4px;
+    border: 3px solid #ff6363;
+    background-color: white;
+}
+
+.img-fluid:before{
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: -16px;
+    right: -16px;
+    background: #00838d;
+    height: 32px;
+    width: 32px;
+    border-radius: 32px;
+    transform: scale(2);
+    transform-origin: 50% 50%;
+    transition: transform 0.15s ease-out;
+}
+.img-fluid:hover:before {
     transform: scale(2.15);
   }
